# LifeSimulator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: Date.h  Food.h  Human.h  Item.h  PriorityQueueOrder.h  RandomGenerator.h  SimConfigurations.h  SimReporter.h  Storage.h  TaskQueue.h  Utility.h
resources/: default_sim_profile.json
src/: Date.cpp  Food.cpp  Human.cpp  Item.cpp  RandomGenerator.cpp  SimConfigurations.cpp  SimReporter.cpp  Storage.cpp  Utility.cpp  main.cpp
tests/: tests-date.cpp  tests-randomGenerator.cpp  tests-taskQueue.cpp
